fix spacing issues

--- a/style.css
+++ b/style.css
@@ -61,21 +61,20 @@ body {
 }
 #searchBar > button {
   border-radius: 10px;
-  margin-left: -10px;
+  margin-left: -20px;
   background-color: #000;
   color: #fff;
   font-size: 2.5rem;
 }
 #searchBar > input {
-  width: 250px;
+  width: 300px;
   font-size: 1.25rem;
   font-weight: 100;
   border-radius: 10px;
 }
 section:nth-of-type(1) {
   width: 60%;
-  padding: 30px;
-  margin: 20px 0;
+  padding: 10px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -113,5 +112,5 @@ section:nth-of-type(1) {
 h1 {
   font-size: 5.5rem;
   font-weight: 700;
-  margin: 0 30px;
+  padding: 0 30px;
 }
